[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MMRSToolBox"
version = "0.0.1"
authors = [
  { name="MengchangLi", email="kujou.zao@gmail.com" },
]
description = "A toolbox for deep-learning research of in the field of multi-modal remote sensing images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MengchangLi/MMRSToolBox"
Issues = "https://github.com/MengchangLi/MMRSToolBox/issues"